--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
     "axios": "^0.19.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "react-scroll": "^1.7.14"
   },
   "scripts": {
     "start": "react-scripts start",
