--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
+    "lodash": "^4.17.15",
     "morgan": "~1.9.0",
     "nodemon": "^2.0.1",
     "request": "^2.88.0"
