--- a/client/package.json
+++ b/client/package.json
@@ -7,8 +7,10 @@
     "axios": "^0.19.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
     "react-scripts": "3.2.0",
-    "react-scroll": "^1.7.14"
+    "react-scroll": "^1.7.14",
+    "redux": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
