--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "react-redux": "^7.1.3",
     "react-scripts": "3.2.0",
     "react-scroll": "^1.7.14",
+    "recharts": "^2.0.0-beta.1",
     "redux": "^4.0.4"
   },
   "scripts": {
