--- a/api/package.json
+++ b/api/package.json
@@ -3,10 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./api/bin/www",
+    "server": "node ./api/bin/www",
+    "client": "npm start --prefix ./client",
+    "dev": "concurrently \"npm run client\" \"npm run server\"",
+    "heroku-postbuild": "npm install --prefix ./client && npm run build --prefix ./client"
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "concurrently": "^5.0.1",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
