--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:9000",
+  "proxy": "https://git-originality-backend.herokuapp.com",
   "dependencies": {
     "axios": "^0.19.0",
     "react": "^16.12.0",
